<resources>
    <string name="app_name">WeDoEvents</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_as_an_organizer">Register as an Organizer</string>
    <string name="register_as_a_seller">Register as a Seller</string>
    <string name="seller_registration">Seller Registration</string>
    <string name="profile_info">Profile Info</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="company_info">Company Info</string>
    <string name="company_name">Company Name</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="select_image">Select Image (optional)</string>
    <string name="register">Register</string>
    <string name="organizer_registration">Organizer Registration</string>
    <string name="user_details">User Details</string>
    <string name="logo">Logo</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="login_register">Login / Register</string>
    <string name="home">Home</string>
    <string name="my_listings">My listings</string>
    <string name="top_events">Top events</string>
    <string name="top_listings">Top listings</string>
    <string name="new_service">New service</string>
    <string name="discounted_price"><strike>200€</strike></string>
    <string name="service_info">Service info</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="product_category">Product category</string>
    <string name="reservation_period">Reservation period</string>
    <string name="photos">Photos</string>
    <string name="min_duration">Min. duration</string>
    <string name="max_duration">Max. duration</string>
    <string name="availability">Availability</string>
    <string name="visibility">Visibility</string>
    <string name="confirm">Confirm</string>
    <string name="cancellation_period">Cancellation period</string>
    <string name="create_service">Create service</string>
    <string name="create_product">Create product</string>
    <string name="seller_my_listings_title">My listings</string>
    <string name="filter_button">Filter</string>
    <string name="sort_by_button">Sort by</string>
    <string name="search_listings">Search listings…</string>
    <string name="sort_by">Sort by</string>
    <string name="best_service_ever">Best service ever</string>
    <string name="best_company_ever">Best company ever</string>
    <string name="_4_6">4.6</string>
    <string name="_59_99_hr">59.99€/hr</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="comments">Comments</string>
    <string name="john_smith">John Smith</string>
    <string name="events">Events</string>
    <string name="market">Market</string>
    <string name="search_events">Search events…</string>
    <string name="_1_10">1 / 10</string>
    <string name="filters">Filters</string>
    <string name="notifications">Notifications</string>
    <string name="close">Close</string>
    <string name="admin_listing_category_name">Name</string>
    <string name="admin_listing_category_description">Description</string>
    <string name="admin_listing_category_type">Type</string>
    <string name="listing_category_replace">Replace</string>
    <string name="listing_category_edit">Edit</string>
    <string name="listing_category_approve">Approve</string>
    <string name="listing_category_delete">Delete</string>
    <string name="pending_categories">Pending categories</string>
    <string name="active_categories">Active categories</string>
    <string name="listing_categories">Listing categories</string>
    <string name="create">Create</string>
    <string name="create_category">Create category</string>
    <string name="replace">Replace</string>
    <string name="create_event">Create event</string>
    <string name="my_events">My events</string>
    <string name="create_listing">Create listing</string>
    <string name="email_">Email…</string>
    <string name="invite">Invite</string>
    <string name="anonymous">Anonymous</string>
    <string name="pdf">PDF</string>
    <string name="edit_category">Edit category</string>
    <string name="replace_with">Replace with</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="add_item">Add item</string>
    <string name="see_suggested">See suggested</string>
    <string name="create_type">Create type</string>
    <string name="event_types">Event types</string>
    <string name="edit_type">Edit type</string>
    <string name="contact">Contact</string>
    <string name="buy">Buy</string>
    <string name="select_event_and_time">Select event and time</string>
    <string name="reserve">Reserve</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="listing_reviews">Listing reviews</string>
    <string name="event_reviews">Event reviews</string>
    <string name="reviews">Reviews</string>
    <string name="view_details">View details</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="public_events">Public events</string>
    <string name="download">Download</string>
    <string name="view_graph">View graph</string>
    <string name="event_statistics">Event statistics</string>
    <string name="rating">Rating</string>
    <string name="count">Count</string>
    <string name="add_profile_photo">Add profile photo.</string>
    <string name="best_event_ever">Best event ever</string>
    <string name="organizer_name">Organizer name</string>
    <string name="novi_sad">Novi Sad</string>
    <string name="_13_15">13:15</string>
    <string name="_13_12_2024">13.12.2024.</string>
    <string name="_4_5">4.5</string>
    <string name="sign_up">Sign Up</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="guest_count">Guest count</string>
    <string name="edit_event">Edit event</string>
    <string name="favorite_listings">Favorite listings</string>
    <string name="favorite_events">Favorite events</string>
    <string name="favorites">Favorites</string>
    <string name="update_account">Update account</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="delete_account">Delete account</string>
    <string name="calendar">Calendar</string>
    <string name="_00_00">00:00</string>
    <string name="agenda">Agenda</string>
    <string name="best_party_ever">Best party ever</string>
    <string name="best_description_for_a_party_ever">Best description for a party ever</string>
    <string name="service_category">Service category</string>
    <string name="category">Category</string>
    <string name="category_suggestion_description">Category suggestion description</string>
    <string name="category_suggestion">Category suggestion</string>
    <string name="edit_service">Edit service</string>
    <string name="edit_product">Edit product</string>
    <string name="update">Update</string>
    <string name="catalogue">Catalogue</string>
    <string name="final_price">Final price</string>
    <string name="original_price">Original price</string>
    <string name="review">Review</string>
    <string name="create_review">Create a review</string>
    <string name="no_comments_yet">No comments yet…</string>
    <string name="best_product_ever">Best product ever</string>
    <string name="chats">Chats</string>
    <string name="best_title_ever">Best title ever</string>
    <string name="best_user">Best User</string>
    <string name="message">Message…</string>
    <string name="chat">Chat</string>
    <string name="seller_profile_picture">Seller profile picture</string>
    <string name="best_seller_ever">Best seller ever</string>
    <string name="report">Report</string>
    <string name="example_example_com">example@example.com</string>
    <string name="_381_1234_567">+381 1234 567</string>
    <string name="block">Block</string>
    <string name="best_author_ever">Best author ever</string>
    <string name="best_report_ever">Best report ever</string>
    <string name="user_reports">User reports</string>
    <string name="reported_users">Reported users</string>
</resources>