<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_close"
        android:icon="@drawable/ic_close"
        android:title="@string/close" />
    <item
        android:id="@+id/nav_homepage"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_my_listings"
        android:icon="@drawable/ic_storefront"
        android:title="@string/my_listings" />
    <item
        android:id="@+id/nav_catalogue"
        android:icon="@drawable/ic_catalogue"
        android:title="@string/catalogue" />
    <item
        android:id="@+id/nav_calendar_seller"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
</menu>
