<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sellerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/best_seller_ever"
            android:textColor="@color/text"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@id/reportButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/reportButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reportButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/reportButton">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/seller_profile_picture"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:text="@string/description"
            android:textColor="@color/pale_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCard" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/lorem"
            android:textColor="@color/pale_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTitle" />

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/description">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/example_example_com"
                    android:textSize="15sp"
                    app:drawableStartCompat="@drawable/ic_email"
                    app:drawableTint="@color/secondary" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:gravity="end|center_vertical"
                    android:text="@string/_4_5"
                    android:textSize="15sp"
                    app:drawableEndCompat="@drawable/ic_star"
                    app:drawableTint="@color/secondary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/_381_1234_567"
                    android:textSize="15sp"
                    app:drawableStartCompat="@drawable/ic_phone"
                    app:drawableTint="@color/secondary" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="6dp"
                    android:gravity="end|center_vertical"
                    android:text="@string/novi_sad"
                    android:textSize="15sp"
                    app:drawableEndCompat="@drawable/ic_location"
                    app:drawableTint="@color/secondary" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/commentsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/comments"
            android:textColor="@color/pale_text"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details" />

        <TextView
            android:id="@+id/noCommentsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/no_comments_yet"
            android:textColor="@color/pale_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commentsTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noCommentsTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>